--- a/web/style.css
+++ b/web/style.css
@@ -1,17 +1,32 @@
 /* Styles go here */
 
-body {
-  line-height: 1;
-  margin: 8px;
+html,body {
+  margin: 0px;
   font-size: 14px;
   background-color: #2c373b;
   font-family: overpassregular, "Helvetica Neue", Helvetica, Arial, sans-serif;
   background-image: url('img/background.jpg');
+  background-repeat: no-repeat;
   background-position: top;
+  height:100%;
 }
 
-.jumbotron-main {
-  background-position: top;
+#wrapper {
+  min-height:100%;
+  position:relative;
+}
+
+#content {
+  padding-bottom: 40px;
+}
+
+#footer {
+  width:100%;
+  height:30px;
+  position:absolute;
+  bottom:0;
+  left:0;
+  text-align: center;
 }
 
 .controls {
@@ -185,16 +200,6 @@ body {
   top:-25px;
 }
 
-/*.inner i {
-  font-size: 2.0em;
-}
-
-p.big > i {
-  font-size: 1em;
-  position: relative;
-  top:-5px;
-}*/
-
 p.big > .fa-arrow-down {
   font-size: 1em;
   position: relative;
@@ -208,7 +213,6 @@ p.big > .fa-arrow-down {
   -o-transform:      rotate(-45deg);
 }
 
-
 .fa-arrow-left.angle, .glyphicon-arrow-left {
   -moz-transform:    rotate(45deg);
   -webkit-transform: rotate(45deg);
@@ -218,4 +222,11 @@ p.big > .fa-arrow-down {
 
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
   display: none !important;
+}
+
+.footer {
+  font-size: .9em;
+  text-align: center;
+  color:#333333;
+  margin-top:100px;
 }
