--- a/web/style.css
+++ b/web/style.css
@@ -5,10 +5,12 @@ html,body {
   font-size: 14px;
   background-color: #2c373b;
   font-family: overpassregular, "Helvetica Neue", Helvetica, Arial, sans-serif;
-  background-image: url('img/background.jpg');
-  background-repeat: no-repeat;
-  background-position: top;
   height:100%;
+  background: url('img/background.jpg') no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 #wrapper {
